[metadata]
name = poboy
version = 0.0.1
description = POboy
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = poedit, po, translation
author = Tatarize
author_email = tatarize@gmail.com
url = https://github.com/meerk40t/poboy
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

[options.entry_points]
console_scripts = poboy = src.poboy:run
meerk40t.plugins = Poboy = src.poboy:plugin
